Fix font size on mobile screen

--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ footer a:active {
   }
 
   h2 {
-    font-size: 24px;
+    font-size: 20px;
   }
 
   .progress-container {
